--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>var whTooltips = {colorLinks: true, iconizeLinks: true, renameLinks: true, iconSize: 'small'};</script>
+    <script src="//wow.zamimg.com/widgets/power.js"></script>
   </body>
 </html>
